--- a/Otter/Base.lproj/Main.storyboard
+++ b/Otter/Base.lproj/Main.storyboard
@@ -32,6 +32,9 @@
                                 <rect key="frame" x="192" y="606" width="88" height="61"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" title="Goals"/>
+                                <connections>
+                                    <segue destination="LXO-xV-Oab" kind="show" id="3HC-5h-VzH"/>
+                                </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ipl-6u-xRL">
                                 <rect key="frame" x="288" y="606" width="88" height="61"/>
@@ -57,6 +60,14 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="136.80000000000001" y="133.5832083958021"/>
+        </scene>
+        <!--Goal-->
+        <scene sceneID="9f7-3F-qHV">
+            <objects>
+                <viewControllerPlaceholder storyboardName="Goal" id="LXO-xV-Oab" sceneMemberID="viewController"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="ERO-sN-nmX" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="137" y="581"/>
         </scene>
     </scenes>
 </document>
